--- a/.editorconfig
+++ b/.editorconfig
@@ -25,5 +25,7 @@ charset = utf-8
 # Possible values - true, false
 trim_trailing_whitespace = true
 
+insert_final_newline = true
+
 [*.md]
 trim_trailing_whitespace = false
