--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "[![Tests for sprint 13](https://github.com/katuxa1231/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/katuxa1231/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests for sprint 14](https://github.com/katuxa1231/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/katuxa1231/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env PORT=3000 node app.js",
-    "dev": "cross-env PORT=3000 nodemon app.js",
+    "start": "cross-env node app.js",
+    "dev": "cross-env nodemon app.js",
     "lint": "npx eslint ./"
   },
   "repository": {
@@ -29,8 +29,14 @@
     "nodemon": "2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
+    "validator": "^13.7.0"
   }
 }
